--- a/solar_app_html/static/index.html
+++ b/solar_app_html/static/index.html
@@ -335,6 +335,54 @@
       <input id="az" type="number" step="1" value="180">
     </div>
 
+    <details class="section">
+      <summary>Battery (optional)</summary>
+      <div class="body">
+
+        <div class="row">
+          <label>Battery size (kWh) (0 = off)</label>
+          <input id="batt_kwh" type="number" step="0.5" value="0" min="0">
+        </div>
+
+        <div class="row">
+          <label>Initial SoC (0–1)</label>
+          <input id="soc_init" type="number" step="0.05" value="0.5" min="0" max="1">
+        </div>
+
+        <div class="row">
+          <label>SoC min (0–1)</label>
+          <input id="soc_min" type="number" step="0.05" value="0.1" min="0" max="1">
+        </div>
+
+        <div class="row">
+          <label>SoC max (0–1)</label>
+          <input id="soc_max" type="number" step="0.05" value="0.9" min="0" max="1">
+        </div>
+
+        <div class="row">
+          <label>Max charge power (kW) (blank = unlimited)</label>
+          <input id="p_charge_kw" type="number" step="0.5" value="" min="0">
+        </div>
+
+        <div class="row">
+          <label>Max discharge power (kW) (blank = unlimited)</label>
+          <input id="p_discharge_kw" type="number" step="0.5" value="" min="0">
+        </div>
+
+        <div class="row">
+          <label>Charge efficiency (0-1)</label>
+          <input id="eta_c" type="number" step="0.01" value="0.95" min="0" max="1">
+        </div>
+
+        <div class="row">
+          <label>Discharge efficiency (0-1)</label>
+          <input id="eta_d" type="number" step="0.01" value="0.95" min="0" max="1">
+        </div>
+
+      </div>
+    </details>
+
+
     <div class="row">
       <label>Day</label>
       <input id="day" type="date">
@@ -386,9 +434,20 @@
   const dayEl = document.getElementById("day");
   const freqEl = document.getElementById("freq");
 
+    //Simulering Solpanel
   const simBox = document.getElementById("simBox");
   const simEl = document.getElementById("simulation");
   const simYearEl = document.getElementById("simulationYear");
+
+    //Simulering med Batteri
+  const battKwhEl = document.getElementById("batt_kwh");
+  const socInitEl = document.getElementById("soc_init");
+  const socMinEl = document.getElementById("soc_min");
+  const socMaxEl = document.getElementById("soc_max");
+  const pChargeEl = document.getElementById("p_charge_kw");
+  const pDischargeEl = document.getElementById("p_discharge_kw");
+  const etaCEl = document.getElementById("eta_c");
+  const etaDEl = document.getElementById("eta_d");
 
 
 
@@ -406,6 +465,20 @@
     const r = await fetch(url);
     if (!r.ok) throw new Error(await r.text());
     return await r.json();
+  }
+
+  function addBatteryParams(params) {
+    params.set("battery_kwh", battKwhEl.value);
+    params.set("soc_init", socInitEl.value);
+    params.set("soc_min", socMinEl.value);
+    params.set("soc_max", socMaxEl.value);
+
+    // blank => don't send (backend will treat as None)
+    if (pChargeEl.value !== "") params.set("p_charge_kw", pChargeEl.value);
+    if (pDischargeEl.value !== "") params.set("p_discharge_kw", pDischargeEl.value);
+
+    params.set("eta_charge", etaCEl.value);
+    params.set("eta_discharge", etaDEl.value);
   }
 
   function openMonthlyModal() {
@@ -1022,7 +1095,7 @@
       }
 
       statusEl.textContent = "Computing all results…";
-
+      
       const params = new URLSearchParams({
         lat: selected.lat,
         lon: selected.lon,
@@ -1033,6 +1106,8 @@
         day: dayEl.value,
         freq: freqEl.value,
       });
+
+      addBatteryParams(params);
 
       // show some progress in the UI (optional but nice)
       if (typeof simEl !== "undefined" && simEl) simEl.innerHTML = "<div class='small'>Running daily simulation…</div>";
@@ -1059,6 +1134,8 @@
           az: azEl.value,
           year: year,
         });
+
+        addBatteryParams(yearParams);
 
         lastYearSim = await getJSON(`/api/simulate_year?${yearParams.toString()}`);
         const yearSim = await getJSON(`/api/simulate_year?${yearParams.toString()}`);
