--- a/solar_app_html/static/index.html
+++ b/solar_app_html/static/index.html
@@ -217,16 +217,6 @@
       display: none;
     }
 
-    .layer-swatch{
-      display:inline-block;
-      width:12px;
-      height:12px;
-      border-radius:3px;
-      margin-right:6px;
-      border:2px solid #666;
-      vertical-align:middle;
-    }
-
     /* --- Layers control styling --- */
     .leaflet-control-layers {
       border-radius: 10px;
@@ -323,81 +313,6 @@
       padding: 10px;
       background: #fff;
     }
-    @media (max-width: 900px) {
-      .modalGrid { grid-template-columns: 1fr; }
-    }
-
-    /* --- Force base-layer radios + text onto ONE line --- */
-    .leaflet-control-layers .leaflet-control-layers-base label {
-      display: flex !important;
-      align-items: center !important;
-      gap: 8px;
-      padding: 6px 10px;
-      margin: 0;
-      white-space: nowrap;
-    }
-
-    /* Leaflet uses a span for the label text - ensure it doesn't wrap under the radio */
-    .leaflet-control-layers .leaflet-control-layers-base label span {
-      display: inline-block !important;
-      line-height: 1.2;
-    }
-
-    /* Kill any weird default offsets */
-    .leaflet-control-layers .leaflet-control-layers-base input[type="radio"] {
-      margin: 0 !important;
-      position: static !important;
-      top: auto !important;
-      vertical-align: middle !important;
-      flex: 0 0 auto;
-    }
-
-    /* ===== Leaflet layers control: consistent left alignment ===== */
-
-    /* Leaflet wraps base+overlays inside this list element */
-    .leaflet-control-layers .leaflet-control-layers-list {
-      padding: 0 !important;     /* remove Leaflet's default indent */
-      margin: 0 !important;
-    }
-
-    /* Remove any extra padding on the section containers */
-    .leaflet-control-layers .leaflet-control-layers-base,
-    .leaflet-control-layers .leaflet-control-layers-overlays {
-      padding: 0 !important;
-      margin: 0 !important;
-    }
-
-    /* Apply the SAME row padding to both base + overlays */
-    .leaflet-control-layers .leaflet-control-layers-base label,
-    .leaflet-control-layers .leaflet-control-layers-overlays label {
-      padding: 6px 10px !important;  /* unified left/right padding */
-      margin: 0 !important;
-    }
-
-    /* Base layer (radio): force one-line row with proper alignment */
-    .leaflet-control-layers .leaflet-control-layers-base label {
-      display: flex !important;
-      align-items: center !important;
-      gap: 8px !important;
-      white-space: nowrap;
-    }
-
-    .leaflet-control-layers .leaflet-control-layers-base input[type="radio"] {
-      margin: 0 !important;
-      flex: 0 0 auto;
-    }
-
-    .leaflet-control-layers .leaflet-control-layers-base label span {
-      display: inline-block !important;
-    }
-
-    /* Overlay rows: keep your grid, but ensure padding is consistent */
-    .leaflet-control-layers .leaflet-control-layers-overlays label {
-      display: grid !important;
-      grid-template-columns: 18px 1fr 18px;
-      align-items: center;
-      gap: 8px;
-    }
 
     /* ===== Fix Leaflet layers control being affected by global form styles ===== */
     .leaflet-control-layers input,
@@ -412,17 +327,25 @@
     }
 
     /* Base layers: spacing between radio and text (needs span wrapper from JS below) */
-    .leaflet-control-layers .leaflet-control-layers-base label {
-      display: flex !important;
-      align-items: center !important;
-      padding: 6px 10px !important;
-      margin: 0 !important;
-    }
-
     .leaflet-control-layers .leaflet-control-layers-base label span.layer-name {
       margin-left: 8px !important; /* match overlay "gap: 8px" */
     }
 
+    /* Base layers: align radio + wrapped label text */
+    .leaflet-control-layers .leaflet-control-layers-base label {
+      display: flex;
+      align-items: center;
+      padding: 6px 10px;
+      margin: 0;
+      white-space: nowrap;
+    }
+    .leaflet-control-layers .leaflet-control-layers-base input[type="radio"] {
+      margin: 0;
+    }
+
+    @media (max-width: 900px) {
+      .modalGrid { grid-template-columns: 1fr; }
+    }
     
   </style>
 </head>
@@ -433,7 +356,7 @@
   <div id="monthlyModal" class="modal" style="display:none;">
     <div class="modalCard">
       <div class="modalHeader">
-        <div style="font-weight:700;">Monthly overview (2024)</div>
+        <div style="font-weight:700;">Monthly overview (2025)</div>
         <button id="btnMonthlyClose" class="modalClose">Close</button>
       </div>
 
@@ -471,7 +394,7 @@
 
         <div class="row">
           <label>Performance ratio PR</label>
-          <input id="pr" type="number" step="0.01" value="1.00" min="0" max="1.2">
+          <input id="pr" type="number" step="0.01" value="0.75" min="0" max="1.2">
         </div>
 
         <div class="row">
@@ -550,7 +473,7 @@
     </div>
 
     <button id="btnSummary">Refresh summary</button>
-    <button id="btnMonthly">Monthly overview (2024)</button>
+    <button id="btnMonthly">Monthly overview (2025)</button>
 
     <div class="hr"></div>
 
@@ -1160,7 +1083,7 @@
     const yyyy = today.getFullYear();
     const mm = String(today.getMonth() + 1).padStart(2, "0");
     const dd = String(today.getDate()).padStart(2, "0");
-    dayEl.value = "2024-06-15";
+    dayEl.value = "2025-06-15";
     const extraOverlays = {}; // name -> Leaflet layer
     const center = await getJSON("/api/center");
 
